# ansible-pve

./: .ansible-lint  .envrc  .gitignore  README.md  TODO-ssh-port.md  ansible.cfg  flake.nix  pyproject.toml  requirements.yml
inventory/: hosts.yml  pve.proxmox.yml
inventory/group_vars/: all.yml
inventory/group_vars/all/: vars.vault.yml  vars.yml
inventory/host_vars/: fw.rackmonkey.de.yml  git.rackmonkey.de.yml  inwx.yml  mail.rackmonkey.de.yml  monitoring.rackmonkey.de.yaml  pg.rackmonkey.de.yml  proxy.rackmonkey.de.yml  pve.rackmonkey.de.yml  sso.rackmonkey.de.yml
playbooks/: base.yml  dns.yml  fw.yml  gitlab.yml  host.yml  monitoring,yaml  monitoring.yaml  proxy.yml  pve.yml  ssh_config.yml  temp.yml
playbooks/include/: ssh.yml
roles/apps/gitlab/: README.md
roles/apps/keycloak/: README.md
roles/apps/keycloak_config/: README.md
roles/apps/postgres/: README.md
roles/apt/tasks/: main.yml
roles/basic/apt/: README.md
roles/basic/basic_ssh/: README.md
roles/basic/fail2ban/: README.md
roles/basic/motd/: README.md
roles/basic/ssh_proxy_config/: README.md
roles/basic/update/: README.md
roles/basic_setup/: README.md
roles/basic_setup/tasks/: main.yml
roles/certbot/: readme.md
roles/certbot copy/: readme.md
roles/deployment_docker_compose/: readme.md
roles/network_config_opnsense/: README.md
roles/nginx_proxy/: README.md  readme.md
roles/postgres/: README.md
roles/prometheus/: README.md
roles/ssh_port_resolver/: README.md
roles/ufw/tasks/: main.yml
roles/wrt/: README.md
scripts/: sort_inventory_yaml.sh
vars/: secrets.yml
(+171 files in other folders)
