[project]
name = "ansible-pve"
version = "0.1.0"
description = "pve"
authors = [
    {name = "debauer",email = "git@debauer.net"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dnspython (>=2.7.0,<3.0.0)",
    "inwx-domrobot (>=3.2.0,<4.0.0)",
    "ansible-lint>=25.9.0",
    "ansible (>=9, <10)",
]

[tool.uv]
package = false

[tool.setuptools]
py-modules = []

[dependency-groups]
dev = [
    "ansible-compat>=25.11.0",
    "molecule>=25.12.0",
    "molecule-plugins[docker]>=25.8.12",
]
